@@ -12,7 +12,7 @@
 #include <stdbool.h>
 #include <string.h>
 
-#if !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) // Bug #2874
+#if !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) // Lack of memory
 bool check_now;
 
 void my_putchar(char c) {
@@ -106,7 +106,7 @@ void
 testBug (void)
 {
 #ifndef __SDCC_mcs51 // This bug #3565 is not yet fixed.
-#if !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) // Bug #2874
+#if !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) // Lack of memory
   m ();
 #endif
 #endif
