@@ -9,7 +9,6 @@
 #endif
 
 /* PR tree-optimization/19283 */
-#if !defined (__SDCC_pdk14) && !defined (__SDCC_pdk15) // Bug #2874
 static inline unsigned short
 foo (unsigned int *p)
 {
@@ -17,14 +16,11 @@ foo (unsigned int *p)
 }
 
 unsigned int u;
-#endif
 
 void
 testTortureExecute (void)
 {
-#if !defined (__SDCC_pdk14) && !defined (__SDCC_pdk15) // Bug #2874
   if ((foo (&u) & 0x8000) != 0)
     ASSERT (0);
   return;
-#endif
 }
