@@ -8,19 +8,16 @@
 #pragma std_c99
 #endif
 
-#if !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) // Bug #2874
 static
 inline int
 f (int x)
 {
   return (x + 1);
 }
-#endif
 
 void
 testTortureExecute (void)
 {
-#if !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) // Bug #2874
   int a = 0 ;
  
   while ( (f(f(f(f(f(f(f(f(f(f(1))))))))))) + a < 12 )
@@ -30,6 +27,5 @@ testTortureExecute (void)
     }
   if (a != 1)
     ASSERT (0);
-#endif
 }
 
