@@ -7,7 +7,6 @@
 #pragma std_sdcc99
 #endif
 
-#if !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) // Bug #2874
 /*--------------
     bug 2591
     inline definition with parameters not in registers
@@ -286,12 +285,10 @@ void bug_3264 (void)
 
 
 /*--------------*/
-#endif
 
 void
 testInline (void)
 {
-#if !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) // Bug #2874
 #ifndef SKIP_EXTERNAL
   char x = inlined_function(); /* can use the inlined or the external implementation */
   ASSERT (x == 1 || x == 2);
@@ -303,7 +300,6 @@ testInline (void)
   bug_3564755 ();
 #ifndef SKIP_EXTERNAL
   bug_2295 ();
-#endif
 #endif
 }
 
